--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Alec (Anh) Ngo | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main"> Alec (Anh) Ngo</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Software Development Engineer Intern @ Amazon Web Services.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,12 +79,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you have!
+                As a dedicated Computer Science major at Berea College, I excel in programming languages like Python, Java, JavaScript, and C++, and have experience in database management, web development, and machine learning. My strong academic background includes a 3.93 GPA and participation in CodePath's Technical Interview Prep Course.<
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
-              </p>
+                Throughout my professional experience, I have thrived in various roles, including a Software Development Engineer Intern at Amazon Web Services (Summer 2023) and a Data Tracking and Analysis Coordinator at Berea College's Office of Sustainability. My research on opinion dynamics with mesophilic agents earned me an invitation to present at the 2023 Annual Modeling and Simulation Conference in Ontario, Canada, where my paper was also approved for publication by the top-tier conference. As a passionate software engineer, I am eager to contribute to innovative projects and continue refining my skills.
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
@@ -272,14 +270,12 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Interested in working together? Let's connect</p>
           <a
-            rel="noreferrer"
-            target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
-          >
+            href="mailto:helloanhngo2002@gmail.com"
+            >helloanhngo2002@gmail.com
+          </a>
         </div>
       </div>
     </section>
@@ -292,13 +288,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+<!--           <a rel="noreferrer" href="#!" target="_blank">
+            <i class="fa fa-instagram fa-inverse"></i>
+          </a> -->
+          <a rel="noreferrer" href="https://www.linkedin.com/in/ahnngo/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/ahnngo" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
